--- a/FFmpeg_for_GDrive.ipynb
+++ b/FFmpeg_for_GDrive.ipynb
@@ -8,6 +8,7 @@
       "collapsed_sections": [
         "EFOqhHG6hOVH",
         "CUq1_Dnegrs1",
+        "KgNPvGccgwd8",
         "RDHuIkoi6l9a",
         "NQ0TxfKeghR8",
         "NObEcBWAJoaz",
