--- a/FFmpeg_for_GDrive.ipynb
+++ b/FFmpeg_for_GDrive.ipynb
@@ -145,7 +145,7 @@
         "colab_type": "text"
       },
       "source": [
-        "#__3. Run FFmpeg Scripts (*Convert, Edit, Trim + more*)__"
+        "#__3. Run FFmpeg Scripts (Convert, Edit, Trim + more)__"
       ]
     },
     {
