--- a/FFmpeg_for_GDrive.ipynb
+++ b/FFmpeg_for_GDrive.ipynb
@@ -614,7 +614,7 @@
         "id": "VRk2Ye1exWVA"
       },
       "source": [
-        "###__Sharable Links of Random Extracted Frames from Video__"
+        "###__Sharable Links of Randomly Extracted Frames from Video__"
       ]
     },
     {
