--- a/FFmpeg_for_GDrive.ipynb
+++ b/FFmpeg_for_GDrive.ipynb
@@ -740,7 +740,7 @@
         "    txt = path.rpartition('.')[0] + \".txt\"\n",
         "    if os.path.exists(txt):\n",
         "      get_ipython().system_raw(\"rm -f '$txt'\")\n",
-        "    !curl -s https://pastebin.com/raw/TApKLQfM -o \"$txt\"\n",
+        "    !curl -s https://pastebin.com/raw/TV8Byydt -o \"$txt\"\n",
         "    with open(txt, 'a+') as file:\n",
         "      file.write(\"\\n\\n\")\n",
         "      file.write(media)\n",
