--- a/FFmpeg_for_GDrive.ipynb
+++ b/FFmpeg_for_GDrive.ipynb
@@ -340,7 +340,7 @@
         "* `out_height` = The height of your cropped video file.\n",
         "* `starting_position_x` & `starting_position_y` = These values define the x & y coordinates of the top left corner of your original video to start cropping from.\n",
         "\n",
-        "###### *Example: For cropping the black bars from a video that looked like* [this](https://yuju.pw/y/312r.png):\n",
+        "###### *Example: For cropping the black bars from a video that looked like* [this](https://i.imgur.com/ud8nbvT.png):\n",
         "* *For your starting coordinates* (`x` , `y`) *you would use* (`0` , `138`).\n",
         "* *For* `out_width` *you would use* `1920`. *And for* `out_height` *you would use `804`.*\n",
         "\n",
@@ -489,7 +489,7 @@
       },
       "source": [
         "#@markdown This will create a folder in the same directory titled \"`Extracted Frames`\"\n",
-        "#@markdown [*Example*](https://yuju.pw/y/36pP.png) of output folder\n",
+        "#@markdown - [Example](https://i.imgur.com/yPDk1hO.png) of output folder\n",
         "import os, sys, re\n",
         "\n",
         "video_file_path = \"\" #@param {type:\"string\"}\n",
@@ -538,7 +538,7 @@
         "colab": {}
       },
       "source": [
-        "#@markdown Example of output image: https://yuju.pw/y/39i2.png <br>\n",
+        "#@markdown Example of output image: https://i.imgur.com/0ymP144.png <br>\n",
         "import os, sys, re\n",
         "\n",
         "video_file_path = \"\" #@param {type:\"string\"}\n",
