--- a/FFmpeg_for_GDrive.ipynb
+++ b/FFmpeg_for_GDrive.ipynb
@@ -38,7 +38,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/sudo-ken/FFmpeg-for-GDrive/blob/master/FFmpeg_for_GDrive.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/cheems/FFmpeg-for-GDrive/blob/master/FFmpeg_for_GDrive.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -48,7 +48,7 @@
         "colab_type": "text"
       },
       "source": [
-        "# **<font color='blue'> Unrar, Unzip, Rar, Zip in GDrive - Shared by [SudoKen](https://www.youtube.com/channel/UCZq5YhZIR-250zX_MzkTbxA?sub_confirmation=1) </font>**"
+        "# **<font color='blue'> FFmpeg for GDrive - Shared by [cheems](https://github.com/cheems) </font>**"
       ]
     },
     {
@@ -765,7 +765,8 @@
         "colab_type": "text"
       },
       "source": [
-        "#◀️ To get more cool stuff like this, subscribe to the Youtube Channel: [SudoKen](https://www.youtube.com/channel/UCZq5YhZIR-250zX_MzkTbxA?sub_confirmation=1)"
+        "# 📚 Follow me on GitHub for more: [_@cheems_](https://github.com/cheems)\n",
+        "# 📦 Repo: [Github](https://github.com/cheems/FFmpeg-for-GDrive)"
       ]
     }
   ]
